--- a/ep-openapi/package.json
+++ b/ep-openapi/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc && ts-node build.ts",
     "compile": "tsc",
-    "test": ". ./test/source.env.sh && mocha --config test/.mocharc.yml test/**/**.*.spec.ts && unset_source_env",
+    "test": ". ./test/source.env.sh && mocha --config test/.mocharc.yml test/**/**.spec.ts && unset_source_env",
     "test:pretty": ". ./test/source.env.sh && mocha --config test/.mocharc.yml test/**/**.*.spec.ts | pino-pretty && unset_source_env"
   },
   "repository": {
@@ -31,38 +31,21 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.12",
-    "@types/express-requests-logger": "^3.0.1",
-    "@types/express-session": "^1.17.4",
-    "@types/js-yaml": "^4.0.2",
-    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.1",
-    "@types/node-fetch": "^2.5.8",
-    "@types/passport": "^1.0.7",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/pino": "^6.3.8",
+    "@types/node-fetch": "^2.6.2",
     "@types/shelljs": "^0.8.8",
     "@types/sinon": "^10.0.2",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "abort-controller": "^3.0.0",
     "chai": "^4.3.4",
-    "dtsgenerator": "^3.16.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "form-data": "^4.0.0",
     "js-yaml": "^3.14.1",
     "lodash": "^4.17.21",
     "mocha": "^8.4.0",
-    "nodemon": "^2.0.7",
+    "node-fetch": "^2.6.7",
     "openapi-typescript-codegen": "^0.19.0",
-    "pino-pretty": "^5.0.1",
-    "prettier": "^2.3.0",
     "shelljs": "^0.8.4",
     "sinon": "^11.1.2",
     "supertest": "^6.1.3",
