--- a/release/ep-openapi-node/package.json
+++ b/release/ep-openapi-node/package.json
@@ -33,8 +33,9 @@
     "tag": "latest"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.5.8",
+    "@types/node-fetch": "^2.6.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.7",
+    "abort-controller": "^3.0.0"
   }
 }
