--- a/ep-openapi/package.json
+++ b/ep-openapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@solace-iot-team/ep-openapi",
+  "name": "@solace-labs/ep-openapi",
   "version": "1.0.0",
   "description": "Code gen and tests for Solace Event Portal Open Api",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/solace-iot-team/ep-openapi.git"
+    "url": "https://github.com/solace-labs/ep-openapi.git"
   },
   "keywords": [
     "api management",
@@ -27,7 +27,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/solace-iot-team/ep-openapi/issues"
+    "url": "https://github.com/solace-labs/ep-openapi/issues"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
