--- a/ep-openapi/package.json
+++ b/ep-openapi/package.json
@@ -42,6 +42,7 @@
     "chai": "^4.3.4",
     "form-data": "^4.0.0",
     "js-yaml": "^3.14.1",
+    "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
     "mocha": "^8.4.0",
     "node-fetch": "^2.6.7",
