attempt to generate 200-beta, failed

--- a/ep-openapi/tsconfig.json
+++ b/ep-openapi/tsconfig.json
@@ -26,7 +26,8 @@
     ]
   },
   "include": [
-    "build.ts"
+    "build.ts",
+    "./generated/**/*.ts"
   ],
   "exclude": [
     "node_modules",
