--- a/ep-openapi/tsconfig.json
+++ b/ep-openapi/tsconfig.json
@@ -26,8 +26,7 @@
     ]
   },
   "include": [
-    "build.ts",
-    "./generated/**/*.ts"
+    "build.ts"
   ],
   "exclude": [
     "node_modules",
