--- a/release/ep-openapi-node/package.json
+++ b/release/ep-openapi-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solace-labs/ep-openapi-node",
-  "version": "2.0.0-ea",
+  "version": "2.0.0-ea+001",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Solace Event Portal - OpenAPI Client for NodeJS (Typescript)",
@@ -33,9 +33,11 @@
     "tag": "latest"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.6.2",
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7",
-    "abort-controller": "^3.0.0"
+    "abort-controller": "^3.0.0",
+    "fetch-with-proxy": "^3.0.1",
+    "form-data": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.2"
   }
 }
