--- a/release/ep-openapi-node/tsconfig.json
+++ b/release/ep-openapi-node/tsconfig.json
@@ -10,10 +10,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts"]
