--- a/.github/workflows/api-test-latest.yml
+++ b/.github/workflows/api-test-latest.yml
@@ -3,7 +3,7 @@
 # Copyright (c) 2022, Solace Corporation, Ricardo Gomez-Ulmke (ricardo.gomez-ulmke@solace.com)
 # ---------------------------------------------------------------------------------------------
 
-name: api-test
+name: api-test-latest
 on:
   # for testing
   workflow_dispatch:
@@ -14,9 +14,6 @@ on:
   schedule:
   # #   # - cron: '0 4 * * MON'
     - cron: '0 4 * * *'
-  pull_request:
-    branches:
-      - main
 env:
   # DEBUG_FLAG: ${{ true }}
   DEBUG_FLAG: ${{ false }}
@@ -24,7 +21,7 @@ env:
   EP_OPENAPI_TEST_LOGS_DIR: "ep-openapi/test/logs"
   EP_OPENAPI_TEST_LOGS_OUTPUT_NAME: "ep-openapi-test-logs"
 jobs:
-  api_test:
+  api_test_latest:
     runs-on: ubuntu-20.04
     strategy:
       max-parallel: 1
@@ -52,8 +49,8 @@ jobs:
           echo "bash --version: "; bash --version
           echo "node --version: "; node --version
           echo "npm --version: "; npm --version
-          echo ">>> environment: TEST_* "
-          env | grep TEST
+          # echo ">>> environment: TEST_* "
+          # env | grep TEST
 
       - name: setup node
         uses: actions/setup-node@v2
@@ -66,6 +63,12 @@ jobs:
           echo "bash --version: "; bash --version
           echo "node --version: "; node --version
           echo "npm --version: "; npm --version
+
+      - name: "pull latest api spec"
+        run: |
+          cd "${EP_OPENAPI_DIR}"
+          cd resources
+          curl https://openapi-v2.solace.cloud/api-docs-v2.json --output ./sep-openapi-spec.json
 
       - name: "npm install"
         run: |
