--- a/.github/workflows/api-test-latest.yml
+++ b/.github/workflows/api-test-latest.yml
@@ -69,6 +69,8 @@ jobs:
           cd "${EP_OPENAPI_DIR}"
           cd resources
           curl https://openapi-v2.solace.cloud/api-docs-v2.json --output ./sep-openapi-spec.json
+          ls -la
+          exit 1
           cat sep-openapi-spec.json
           exit 1
 
