--- a/.github/workflows/api-test-latest.yml
+++ b/.github/workflows/api-test-latest.yml
@@ -71,8 +71,7 @@ jobs:
           rm ep-openapi-spec.json
           curl https://openapi-v2.solace.cloud/api-docs-v2.json --output ./ep-openapi-spec.json
           ls -la
-          cat ep-openapi-spec.json
-          exit 1
+          cat ep-openapi-spec.json | grep -E -o ".{0,100}\"version\": \".{0,100}"
 
       - name: "npm install"
         run: |
