--- a/release/ep-openapi-node/tsconfig.json
+++ b/release/ep-openapi-node/tsconfig.json
@@ -13,7 +13,7 @@
     "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": false
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts"]
