--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -83,6 +83,20 @@ jobs:
           export EP_OPENAPI_TEST_SOLACE_CLOUD_TOKEN="${{ secrets.EP_OPENAPI_TEST_SOLACE_CLOUD_TOKEN }}"
           test/run.sh
 
+      - name: cat lcov info
+        if: env.DEBUG_FLAG == 'true'
+        run: |
+          cat "${{ github.workspace }}/${{ env.EP_OPENAPI_TEST_LOGS_DIR }}/coverage/lcov.info"
+
+      - name: Coveralls Parallel
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
+          flag-name: run-${{ matrix.node }}
+          parallel: true
+          path-to-lcov: ${{ github.workspace }}/${{ env.EP_OPENAPI_TEST_LOGS_DIR }}/coverage/lcov.info
+          base-path: ${{ env.EP_OPENAPI_DIR }}
+
       - name: Archive Test Logs
         if: ${{ (failure() && !cancelled()) || (always() && (github.event_name=='workflow_dispatch' || env.DEBUG_FLAG=='true') ) }}
         uses: actions/upload-artifact@v2
@@ -90,6 +104,16 @@ jobs:
           name: ${{ env.EP_OPENAPI_TEST_LOGS_OUTPUT_NAME }}
           path: ${{ github.workspace }}/${{ env.EP_OPENAPI_TEST_LOGS_DIR }}
           if-no-files-found: error
+
+  finish:
+    needs: api_test
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
+          parallel-finished: true
 
 ###
 # The End.
