--- a/ep-openapi/package.json
+++ b/ep-openapi/package.json
@@ -6,8 +6,8 @@
     "build": "tsc && ts-node build.ts",
     "compile": "tsc",
     "compile:spec": "tsc --project tsconfig.compile-spec.json",
-    "test": ". ./test/source.env.sh && mocha --config test/.mocharc.yml test/**/**.spec.ts && unset_source_env",
-    "test:pretty": ". ./test/source.env.sh && mocha --config test/.mocharc.yml test/**/**.*.spec.ts | pino-pretty && unset_source_env"
+    "test": ". ./test/source.env.sh && nyc mocha --config test/.mocharc.yml test/**/**.spec.ts && unset_source_env",
+    "test:pretty": ". ./test/source.env.sh && nyc mocha --config test/.mocharc.yml test/**/**.*.spec.ts | pino-pretty && unset_source_env"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,7 @@
     "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
     "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
     "openapi-typescript-codegen": "^0.19.0",
     "shelljs": "^0.8.4",
     "sinon": "^11.1.2",
