--- a/release/ep-openapi-node/package.json
+++ b/release/ep-openapi-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solace-labs/ep-openapi-node",
-  "version": "2.0.0-alpha.002",
+  "version": "2.3.0-beta.001",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Solace Event Portal - OpenAPI Client for NodeJS (Typescript)",
