--- a/ep-openapi/tsconfig.compile-spec.json
+++ b/ep-openapi/tsconfig.compile-spec.json
@@ -1,9 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "target":"es2021",
+    "target":"ES6",
     "module": "commonjs",
-    "lib": ["es2021", "dom" ],
+    "lib": ["ES6", "dom" ],
     "esModuleInterop": true,
     "moduleResolution": "node",
     "declaration": true,
