--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -43,7 +43,7 @@ jobs:
         uses: andymckay/cancel-action@0.2
 
       - name: Checkout Current Branch
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
 
