--- a/release/ep-openapi-browser/package.json
+++ b/release/ep-openapi-browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solace-labs/ep-openapi-browser",
-  "version": "2.0.1",
+  "version": "2.0.1-build.002",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Solace Event Portal - OpenAPI Client for Browser (Typescript)",
