--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,19 @@
 
-name: release-docs
+name: release
 on:
+  # # for testing
   workflow_dispatch:
+
+  # for production
+  release:
+    types: [created]
 env:
+  # DEBUG_FLAG: ${{ true }}
   DEBUG_FLAG: ${{ false }}
   RELEASE_DIR: "release"
 
 jobs:
-  release-docs:
+  release:
     runs-on: ubuntu-20.04
     steps:
       - name: Check Auth
@@ -25,6 +31,34 @@ jobs:
         with:
           ref: ${{ github.ref }}
 
+      - name: env before install
+        if: env.DEBUG_FLAG == 'true'
+        run: |
+          echo "bash --version: "; bash --version
+          echo "node --version: "; node --version
+          echo "npm --version: "; npm --version
+          echo ">>> environment: RELEASE_* "
+          env | grep RELEASE
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: env after install
+        if: env.DEBUG_FLAG == 'true'
+        run: |
+          echo "bash --version: "; bash --version
+          echo "node --version: "; node --version
+          echo "npm --version: "; npm --version
+          echo "docker --version"; docker --version
+          echo "docker-compose --version"; docker-compose --version
+
+      - name: Release
+        run: |
+          export NODE_AUTH_TOKEN=${{ secrets.NPM_TOKEN }}
+          cd "$GITHUB_WORKSPACE/${RELEASE_DIR}"
+          ./release.sh
+
       - name: "docs:setup python"
         uses: actions/setup-python@v2
         with:
@@ -35,14 +69,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r docs/devel/docs.requirements.txt
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: "build"
+      - name: "docs:make"
         run: |
-          cd "${RELEASE_DIR}"
-          ./build.sh
+          cd docs
+          ./make.sh
 
       - name: "docs: publish to gh-pages"
         run: |
@@ -57,7 +87,6 @@ jobs:
           git commit --allow-empty -F ../generated.txt
           # git push -f -u origin gh-pages
           git push -u origin gh-pages
-
 
 ###
 # The End.
