--- a/.github/workflows/api-test-latest-compile.yml
+++ b/.github/workflows/api-test-latest-compile.yml
@@ -48,7 +48,7 @@ jobs:
           # env | grep TEST
 
       - name: setup node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
@@ -66,8 +66,8 @@ jobs:
           rm ep-openapi-spec.json
           curl https://openapi-v2.solace.cloud/api-docs-v2.json --output ./ep-openapi-spec.json
           ls -la
-          echo "Version:"
-          cat ep-openapi-spec.json | grep -E -o ".{0,100}\"version\": \".{0,100}"
+          # echo "Version:"
+          # cat ep-openapi-spec.json | grep -E -o ".{0,100}\"version\": \".{0,100}"
 
       - name: "npm install"
         run: |
