--- a/release/ep-apim-openapi-browser/package.json
+++ b/release/ep-apim-openapi-browser/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@solace-labs/ep-openapi-node",
-  "version": "2.0.5-build.001",
+  "name": "@solace-labs/ep-apim-openapi-browser",
+  "version": "2.0.0-alpha.001",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "description": "Solace Event Portal - OpenAPI Client for NodeJS (Typescript)",
+  "description": "Solace Event Portal - APIM OpenAPI Client for Browser (Typescript)",
   "homepage": "https://github.com/SolaceLabs/ep-openapi-typescript",
   "repository": {
     "type": "git",
@@ -31,13 +31,5 @@
     "cache": ".cache/.npm",
     "registry": "https://registry.npmjs.org",
     "tag": "latest"
-  },
-  "dependencies": {
-    "abort-controller": "^3.0.0",
-    "fetch-with-proxy": "^3.0.1",
-    "form-data": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/node-fetch": "^2.6.2"
   }
 }
